--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ pageClass: home
     </div>
     <div class="unit [ xs-1 m-1-3 ] unit-pull-m-2-3 island-1-2">
       <div class="embed embed-4by3">
-        <img class="embed-item" src="https://placehold.it/800x600" alt="">
+        <img class="embed-item" src="{{site.baseurl}}/images/contest-prev.jpg" alt="">
       </div>
     </div>
   </div>
@@ -26,9 +26,9 @@ pageClass: home
 <section id="hours" class="hours pad-t-b-2" tabindex="0">
   <div class="wrapper">
     <h2 class='gutter push-0'>Store Hours & Locations</h2>
-    <div class="grid island-1-2">
+    <div class="grid grid-stretch island-1-2">
       {% for hours in site.data.store-hours %}
-        <div class="unit [ xs-1 m-1-2 ] island-1-2">
+        <div class="unit [ xs-1 m-1-2 ] island-1-2 unit-content-distribute">
           {% include hours-block.html %}
         </div>
       {% endfor %}
@@ -44,7 +44,7 @@ pageClass: home
           <a href="{{site.baseurl}}/{{news.url}}" class="grid grid-stretch bg-lg-lighter-hov">
             <div class="unit [ xs-1-2 m-1 l-1-2 ] island-1-2">
               <div class="embed embed-1by1">
-                <img class="embed-item" src="{{news.prevImage}}" alt="">
+                <img class="embed-item" src="{{site.baseurl}}/images/{{news.prevImage}}" alt="">
               </div>
             </div>
             <div class="unit [ xs-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
@@ -60,7 +60,7 @@ pageClass: home
           <a href="{{site.baseurl}}/{{news.url}}" class="grid grid-stretch bg-lg-lighter-hov">
             <div class="unit [ xs-1-2 m-1 l-1-2 ] island-1-2">
               <div class="embed embed-1by1">
-                <img class="embed-item" src="{{news.prevImage}}" alt="">
+                <img class="embed-item" src="{{site.baseurl}}/images/{{news.prevImage}}" alt="">
               </div>
             </div>
             <div class="unit [ xs-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
