--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@ pageClass: home
       {% for news in site.categories.news limit:1 %}
         <li class="unit [ xs-1 m-1-2 ]">
           <a href="{{site.baseurl}}/{{news.url}}" class="grid grid-stretch bg-lg-lighter-hov">
-            <div class="unit [ xs-1-2 m-1 l-1-2 ] island-1-2">
+            <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2">
               <div class="embed embed-1by1">
                 <img class="embed-item" src="{{site.baseurl}}/images/{{news.prevImage}}" alt="">
               </div>
             </div>
-            <div class="unit [ xs-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
+            <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
               <h3 class="giga push-1-2 text-000">{{news.title}}</h3>
               <p class="content-fill text-000 push-0">{{news.meta}}</p>
               <span class="hyperlink">Read more...</span>
@@ -58,12 +58,12 @@ pageClass: home
       {% for news in site.categories.events limit:1 %}
         <li class="unit [ xs-1 m-1-2 ]">
           <a href="{{site.baseurl}}/{{news.url}}" class="grid grid-stretch bg-lg-lighter-hov">
-            <div class="unit [ xs-1-2 m-1 l-1-2 ] island-1-2">
+            <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2">
               <div class="embed embed-1by1">
                 <img class="embed-item" src="{{site.baseurl}}/images/{{news.prevImage}}" alt="">
               </div>
             </div>
-            <div class="unit [ xs-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
+            <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
               <h3 class="giga push-1-2 text-000">{{news.title}}</h3>
               <p class="content-fill text-000 push-0">{{news.meta}}</p>
               <span class="hyperlink">Read more...</span>
