Update news template

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ pageNumber: 0
           <a href="{{news.url}}" class="grid grid-stretch bg-lg-lighter-hov">
             <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2">
               <div class="embed embed-1by1">
-                <img class="embed-item" src="{{site.baseurl}}/images/{{news.prevImage}}" alt="">
+                <img class="embed-item" src="{{site.baseurl}}/images/news/{{news.prevImage}}" alt="">
               </div>
             </div>
             <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
@@ -56,7 +56,7 @@ pageNumber: 0
           <a href="{{news.url}}" class="grid grid-stretch bg-lg-lighter-hov">
             <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2">
               <div class="embed embed-1by1">
-                <img class="embed-item" src="{{site.baseurl}}/images/{{news.prevImage}}" alt="">
+                <img class="embed-item" src="{{site.baseurl}}/images/news/{{news.prevImage}}" alt="">
               </div>
             </div>
             <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
