--- a/news-events.html
+++ b/news-events.html
@@ -13,7 +13,7 @@ pageNumber: 2
         <a href="{{news.url}}" class="grid grid-stretch bg-lg-hov island-1-2">
           <div class="unit [ xs-1 s-1-2 m-1-3 l-1-4 ] island-1-2">
             <div class="embed embed-1by1">
-              <img class="embed-item" src="{{site.baseurl}}/images/{{news.prevImage}}" alt="">
+              <img class="embed-item" src="{{site.baseurl}}/images/news/{{news.prevImage}}" alt="">
             </div>
           </div>
           <div class="unit [ xs-1 s-1-2 m-2-3 l-3-4 ] island-1-2 unit-content-distribute">
@@ -30,7 +30,7 @@ pageNumber: 2
         <a href="{{news.url}}" class="grid grid-stretch bg-lg-hov island-1-2">
           <div class="unit [ xs-1 s-1-2 m-1-3 l-1-4 ] island-1-2">
             <div class="embed embed-1by1">
-              <img class="embed-item" src="{{site.baseurl}}/images/{{news.prevImage}}" alt="">
+              <img class="embed-item" src="{{site.baseurl}}/images/news/{{news.prevImage}}" alt="">
             </div>
           </div>
           <div class="unit [ xs-1 s-1-2 m-2-3 l-3-4 ] island-1-2 unit-content-distribute">
