Create about page

--- a/news-events.html
+++ b/news-events.html
@@ -1,8 +1,8 @@
 ---
 layout: main
-pageClass: volunteer
-title: Volunteer
-pageNumber: 2
+pageClass: news-events
+title: News & Events
+pageNumber: 3
 ---
 <div class="wrapper">
   <div class="grid">
@@ -17,8 +17,8 @@ pageNumber: 2
             </div>
           </div>
           <div class="unit [ xs-1 s-1-2 m-2-3 l-3-4 ] island-1-2 unit-content-distribute">
-            <h3 class="giga push-1-2 text-000">{{news.title}}</h3>
-            <p class="content-fill text-000 push-0">{{news.meta}}</p>
+            <h3 class="giga push-1-2 text-secondary">{{news.title}}</h3>
+            <p class="content-fill text-secondary push-0">{{news.meta}}</p>
             <span class="hyperlink">Read more...</span>
           </div>
         </a>
@@ -34,8 +34,8 @@ pageNumber: 2
             </div>
           </div>
           <div class="unit [ xs-1 s-1-2 m-2-3 l-3-4 ] island-1-2 unit-content-distribute">
-            <h3 class="giga push-1-2 text-000">{{news.title}}</h3>
-            <p class="content-fill text-000 push-0">{{news.meta}}</p>
+            <h3 class="giga push-1-2 text-secondary">{{news.title}}</h3>
+            <p class="content-fill text-secondary push-0">{{news.meta}}</p>
             <span class="hyperlink">Read more...</span>
           </div>
         </a>
