Update image paths and create About data file

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@ layout: main
 title: About
 pageClass: home
 pageNumber: 1
+pageName: about
 ---
 <div id="about-subnav-bar" class="about-subnav-bar [ xs-0 m-1 ] text-center">
   <div class="wrapper gutter">
