--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
 layout: main
+pageName: home
 pageClass: home
 pageNumber: 0
-pageName: 
 ---
-<p>{{page.pageName}}</p>
 <section id="announcements" class="announcements bg-lg pad-t-b" tabindex="0">
   <div class="grid grid-middle wrapper island-1-2">
     <div class="unit [ xs-1 m-2-3 ] unit-push-m-1-3 island-1-2">
