--- a/about.html
+++ b/about.html
@@ -58,17 +58,18 @@ pageName: about
   {% endfor %}
 </section>
 <section id="what-we-give" class="what-we-give" tabindex="0">
-  <div class="slide slide-banner slide-reverse">
+  <div class="slide slide-banner slide-reverse" style="background-image: url('{{site.baseurl}}{{site.data.pages.about.what-we-give.bannerImg}}');">
+    <div class="hero-overlay"></div>
     <div class="slide-unit slide-content">
       <div class="slide-content-wrap gutter pad-t-b-2">
-        <h2>Each year we donate over $50,000 to local organizations</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae rutrum eros, ac elementum nisl. Morbi ut rhoncus nisi. Phasellus aliquam nulla id placerat porta.</p>
+        <h2>{{site.data.pages.about.what-we-give.bannerTitle}}</h2>
+        <p>{{site.data.pages.about.what-we-give.bannerText}}</p>
       </div>
     </div>
   </div>
   <div class="pad-t-b-2">
     <div class="wrapper">
-      <h2 class="text-center gutter">2017 Donations</h2>
+      <h2 class="text-center gutter">{{site.data.pages.about.what-we-give.donationsTitle}}</h2>
       <div class="grid island-1-2 donation-grid">
         <div class="unit [ xs-1 m-1-2 ] island-1-2">
           <div class="grid">
