Update Home page input structure

--- a/donate.html
+++ b/donate.html
@@ -3,6 +3,7 @@ layout: main
 pageClass: donate
 title: Donate
 pageNumber: 4
+pageName: donate
 formTitle: Donate Online
 formData: donate-form
 formID: donate-form
