--- a/news-events.html
+++ b/news-events.html
@@ -3,6 +3,7 @@ layout: main
 pageClass: news-events
 title: News & Events
 pageNumber: 3
+pageName: news-events
 ---
 <div class="wrapper">
   <div class="grid">
