--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@ pageNumber: 0
   <div class="grid grid-middle wrapper island-1-2">
     <div class="unit [ xs-1 m-2-3 ] unit-push-m-1-3 island-1-2">
       <div class="max-length">
-        <h2 class="push-0">Enter to win this month's contest!</h2
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae rutrum eros, ac elementum nisl. Morbi ut rhoncus nisi. Phasellus aliquam nulla id placerat porta.</p>
-        <a class="btn" href="#">Enter Now</a>
+        {{site.data.pages.home.announcements.message}}
+        <!-- <h2 class="push-0">Enter to win this month's contest!</h2
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae rutrum eros, ac elementum nisl. Morbi ut rhoncus nisi. Phasellus aliquam nulla id placerat porta.</p> -->
+        {% if site.data.pages.home.announcements.announcementButton.announcementBtn == true %}
+          <a class="btn {{site.data.pages.home.announcements.announcementButton.announcementBtnStyle}}" href="{{site.data.pages.home.announcements.announcementButton.announcementBtnLink}}">{{site.data.pages.home.announcements.announcementButton.announcementBtnText}}</a>
+        {% endif %}
       </div>
     </div>
     <div class="unit [ xs-1 m-1-3 ] unit-pull-m-2-3 island-1-2">
       <div class="embed embed-4by3">
-        <img class="embed-item" src="{{site.baseurl}}/images/contest-prev.jpg" alt="">
+        <img class="embed-item" src="{{site.baseurl}}{{site.data.pages.home.announcements.announcementImg" alt="">
       </div>
     </div>
   </div>
