--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ pageNumber: 0
     </div>
     <div class="unit [ xs-1 m-1-3 ] unit-pull-m-2-3 island-1-2">
       <div class="embed embed-4by3">
-        <img class="embed-item" src="{{site.baseurl}}{{site.data.pages.home.announcements.announcementImg" alt="">
+        <img class="embed-item" src="{{site.baseurl}}{{site.data.pages.home.announcements.announcementImg}}" alt="">
       </div>
     </div>
   </div>
