--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@ pageName: home
 pageClass: home
 pageNumber: 0
 ---
-<section id="announcements" class="announcements bg-lg pad-t-b" tabindex="0">
-  <div class="grid grid-middle wrapper island-1-2">
-    <div class="unit [ xs-1 m-2-3 ] unit-push-m-1-3 island-1-2">
-      <div class="max-length">
-        {{site.data.pages.home.announcements.message | markdownify }}
-        {% if site.data.pages.home.announcements.announcementButton.announcementBtn == true %}
-          <a class="btn {{site.data.pages.home.announcements.announcementButton.announcementBtnStyle}}" href="{{site.data.pages.home.announcements.announcementButton.announcementBtnLink}}">{{site.data.pages.home.announcements.announcementButton.announcementBtnText}}</a>
-        {% endif %}
+{% if site.data.pages.home.announcements.activateAnnouncements == true %}
+  <section id="announcements" class="announcements bg-lg pad-t-b" tabindex="0">
+    <div class="grid grid-middle wrapper island-1-2">
+      <div class="unit [ xs-1 m-2-3 ] unit-push-m-1-3 island-1-2">
+        <div class="max-length">
+          {{site.data.pages.home.announcements.message | markdownify }}
+          {% if site.data.pages.home.announcements.announcementButton.announcementBtn == true %}
+            <a class="btn {{site.data.pages.home.announcements.announcementButton.announcementBtnStyle}}" href="{{site.data.pages.home.announcements.announcementButton.announcementBtnLink}}">{{site.data.pages.home.announcements.announcementButton.announcementBtnText}}</a>
+          {% endif %}
+        </div>
+      </div>
+      <div class="unit [ xs-1 m-1-3 ] unit-pull-m-2-3 island-1-2">
+        <div class="embed embed-4by3">
+          <img class="embed-item" src="{{site.baseurl}}{{site.data.pages.home.announcements.announcementImg}}" alt="">
+        </div>
       </div>
     </div>
-    <div class="unit [ xs-1 m-1-3 ] unit-pull-m-2-3 island-1-2">
-      <div class="embed embed-4by3">
-        <img class="embed-item" src="{{site.baseurl}}{{site.data.pages.home.announcements.announcementImg}}" alt="">
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
+{% endif %}
 <section id="hours" class="hours pad-t-b-2" tabindex="0">
   <div class="wrapper">
     <h2 class='gutter push-0'>Store Hours & Locations</h2>
