--- a/about.html
+++ b/about.html
@@ -125,9 +125,9 @@ pageName: about
     <div class="slide-unit slide-content bg-lg">
       <div class="slide-content-wrap gutter pad-t-b-2">
         <h2 class="push-1-2">Board of Directors</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae rutrum eros, ac elementum nisl. Morbi ut rhoncus nisi. Phasellus aliquam nulla id placerat porta.</p>
-        <h3 class="push-1-2">2018 Board of Directors</h3>
-        {% for board in site.data.board-members %}
+        <p>{{site.data.pages.about.board.boardAbout}}</p>
+        <h3 class="push-1-2">{{site.data.pages.about.board.boardTitle}}</h3>
+        {% for board in site.data.pages.about.board.boardMembers %}
           <div class="grid">
             <div class="unit [ xs-1-2 ] bold milli">
               <p class="push-0">{{board.position}}</p>
