--- a/about.html
+++ b/about.html
@@ -1,16 +1,16 @@
 ---
 layout: main
 title: About
-pageNumber: 1
 pageName: about
 ---
+{% assign pages=site.data.pages.[page.pageName] %}
 <div id="about-subnav-bar" class="about-subnav-bar [ xs-0 m-1 ] text-center">
   <div class="wrapper gutter">
     {% include about-subnav.html olClass='push-0 list-group-inline pad-t-1-4 pad-b-1-4' aClass="inline-block island-1-2 line-hover" %}
   </div>
 </div>
 <section id="history-hub" tabindex="0">
-  {% for slides in site.data.pages.about.history-slides.edit-history-slides %}
+  {% for slides in pages.history-slides.edit-history-slides %}
     <div id="slide-{{slides.name}}" class="slide {% if slides.reverse == true %}slide-reverse{% endif %}">
       <div class="slide-unit slide-content {{slides.slideBGColor}}">
         <div class="slide-content-wrap gutter pad-t-b-2">
@@ -27,7 +27,7 @@ pageName: about
     <div class="wrapper pad-t-b-2">
       <h2 class="text-center gutter">Our Services</h2>
       <div class="grid grid-h-center island-1-2">
-        {% for services in site.data.pages.about.our-services %}
+        {% for services in pages.our-services %}
           <a class="unit [ xs-1 m-1-2 l-1-3 ] island-1-2 unit-content-distribute smooth-scroll" href="#{{services.link}}">
             <div class="bg-fff gutter pad-t-b-2 unit-content-distribute content-fill bg-lg-lighter-hov">
               <div class="logo-wrap content-fill push">
@@ -41,7 +41,7 @@ pageName: about
       </div>
     </div>
   </div>
-  {% for serviceSlides in site.data.pages.about.our-services %}
+  {% for serviceSlides in pages.our-services %}
     <div id="{{serviceSlides.link}}" class="slide {% if serviceSlides.reverse == true %}slide-reverse{% endif %}">
       <div class="slide-unit slide-content">
         <div class="slide-content-wrap gutter pad-t-b-2">
@@ -57,18 +57,18 @@ pageName: about
   {% endfor %}
 </section>
 <section id="what-we-give" class="what-we-give" tabindex="0">
-  <div class="slide slide-banner slide-reverse" style="background-image: url('{{site.baseurl}}{{site.data.pages.about.what-we-give.bannerImg}}');">
+  <div class="slide slide-banner slide-reverse" style="background-image: url('{{site.baseurl}}{{pages.what-we-give.bannerImg}}');">
     <div class="hero-overlay"></div>
     <div class="slide-unit slide-content">
       <div class="slide-content-wrap gutter pad-t-b-2">
-        <h2>{{site.data.pages.about.what-we-give.bannerTitle}}</h2>
-        <p>{{site.data.pages.about.what-we-give.bannerText}}</p>
+        <h2>{{pages.what-we-give.bannerTitle}}</h2>
+        <p>{{pages.what-we-give.bannerText}}</p>
       </div>
     </div>
   </div>
   <div class="pad-t-b-2">
     <div class="wrapper">
-      <h2 class="text-center gutter">{{site.data.pages.about.what-we-give.donationsTitle}}</h2>
+      <h2 class="text-center gutter">{{pages.what-we-give.donationsTitle}}</h2>
       <div class="grid island-1-2 donation-grid">
         <div class="unit [ xs-1 m-1-2 ] island-1-2">
           <div class="grid">
@@ -125,9 +125,9 @@ pageName: about
     <div class="slide-unit slide-content bg-lg">
       <div class="slide-content-wrap gutter pad-t-b-2">
         <h2 class="push-1-2">Board of Directors</h2>
-        <p>{{site.data.pages.about.board.boardAbout}}</p>
-        <h3 class="push-1-2">{{site.data.pages.about.board.boardTitle}}</h3>
-        {% for board in site.data.pages.about.board.boardMembers %}
+        <p>{{pages.board.boardAbout}}</p>
+        <h3 class="push-1-2">{{pages.board.boardTitle}}</h3>
+        {% for board in pages.board.boardMembers %}
           <div class="grid">
             <div class="unit [ xs-1-2 ] bold milli">
               <p class="push-0">{{board.position}}</p>
